# ML2020

./: .gitignore
01_Bernoulli/: bernoulli.jl  bernoulli.py
01_Bernoulli/beroxide/: Cargo.toml
01_Bernoulli/beroxide/src/: main.rs
02_Optimize/: gradient_descent.jl  gradient_descent.py
03_Regression/: data.csv  data_gen.R  gaussian.R  simple.R  simple.py
03_Regression/bayesian/: Cargo.toml  nc_plot.py
03_Regression/bayesian/data/: data.nc  reg.nc
03_Regression/bayesian/src/: main.rs
03_Regression/gaussian/: data.nc  reg.nc  xkcd_plot.py
03_Regression/gaussian/data/: data.nc
03_Regression/gaussian/data/par/: reg_lam_1.nc  reg_lam_10.nc  reg_lam_2.nc  reg_lam_3.nc  reg_lam_4.nc  (+5 more)
03_Regression/gaussian/src/: main.rs
03_Regression/julia/: gaussian.jl  nc_plot2.py  reg.jl
03_Regression/julia/data/: data.nc  gauss.nc  gauss_single_reg.nc  reg.nc
03_Regression/nd_gauss/: Cargo.toml
03_Regression/nd_gauss/src/: main.rs
04_LDA/: hw3.md
04_LDA/hw3/: Cargo.toml
04_LDA/julia/: lda.jl  nc_plot.py
04_LDA/julia/data/: lda.nc
04_LDA/rust/data/: lda.nc
05_Review/Note/: review.html
05_Review/coin/: Cargo.toml
05_Review/coin/src/: main.rs
05_Review/olympic/: Cargo.toml  olympic.csv
Gaussian/: data.csv  stat.R
Gaussian/stat/: Cargo.toml  data.nc  mahal.nc  mahal1.nc  mahal2.nc  nc_plot.py
Gaussian/stat/src/: main.rs
Gaussian/stat_arma/: arma_r.cpp  stat.R
Gaussian/stat_nd/: Cargo.toml
Gaussian/stat_nd/src/: main.rs
Homework/HW1/: Cargo.toml  data.nc  mahal1.nc  mahal2.nc  nc_plot.py  run.sh
Homework/HW1/Python/: 01_stat_ops.py
(+1 files in other folders)
